--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Imogen Fulton
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Software Developer and Artist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars0.githubusercontent.com/u/30714448?s=400&u=34e506ac9587168296ccd8d9d57a7c01d62d6a96&v=4
 
 #
 # Flags below are optional
