--- a/_config.yml
+++ b/_config.yml
@@ -18,15 +18,15 @@ avatar: https://avatars0.githubusercontent.com/u/30714448?s=400&u=34e506ac958716
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: imocen@dfdt.me
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: imogenerative
   instagram:
   linkedin:
   pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  rss: anything
+  twitter: calculush
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -47,7 +47,7 @@ url:
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: "blog"
 
 #
 # !! You don't need to change any of the configuration flags below !!
