--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Imogen Fulton
 
 # Short bio or description (displayed in the header)
-description: Software Developer and Artist
+description: Software Developer and New Media Artist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/30714448?s=400&u=34e506ac9587168296ccd8d9d57a7c01d62d6a96&v=4
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://imogenerative.github.io/blog
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
