--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Imogen Fulton
+name: imogenerative
 
 # Short bio or description (displayed in the header)
-description: Software Developer and New Media Artist
+description: software developer and new media artist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/30714448?s=400&u=34e506ac9587168296ccd8d9d57a7c01d62d6a96&v=4
