--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://avatars0.githubusercontent.com/u/30714448?s=400&u=34e506ac958716
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: imocen@dfdt.me
+  email: imogen@dfdt.me
   facebook:
   flickr:
   github: imogenerative
