--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: imogenerative
+name: imogen.gq
 
 # Short bio or description (displayed in the header)
 description: software developer and new media artist
@@ -19,7 +19,7 @@ avatar: https://avatars0.githubusercontent.com/u/30714448?s=400&u=34e506ac958716
 footer-links:
   dribbble:
   email: imogen@dfdt.me
-  facebook:
+  facebook: imogen.fulton
   flickr:
   github: imogenerative
   instagram:
