--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@ avatar: https://avatars0.githubusercontent.com/u/30714448?s=400&u=34e506ac958716
 footer-links:
   dribbble:
   email: imogen@dfdt.me
-  facebook: imogen.fulton
+  facebook:
   flickr:
   github: imogenerative
   instagram:
   linkedin:
   pinterest:
-  rss: anything
+  rss: .
   twitter: calculush
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
