--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: imogenerative
+name: chiropterascout
 
 # Short bio or description (displayed in the header)
 description: software developer and new media artist
@@ -18,10 +18,10 @@ avatar: https://avatars0.githubusercontent.com/u/30714448?s=400&u=34e506ac958716
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: imogen@dfdt.me
+  email: scout@dfdt.me
   facebook:
   flickr:
-  github: imogenerative
+  github: chiropterascout
   instagram:
   linkedin:
   pinterest:
@@ -34,14 +34,14 @@ footer-links:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus: imogen-gq
+disqus: scout-codes
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://imogen.gq
+url: http://scout.codes
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
