--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email: scout@dfdt.me
   facebook:
   flickr:
-  github: chiropterascout
+  github: scout_quinn
   instagram:
-  linkedin:
+  linkedin: scoutquinn
   pinterest:
   rss: anything
   twitter: calculush
