--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: scout@dfdt.me
   facebook:
   flickr:
-  github: scout_quinn
+  github: scoutquinn
   instagram:
   linkedin: scoutquinn
   pinterest:
