--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: scout codes
 description: software developer and new media artist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars0.githubusercontent.com/u/30714448?s=400&u=34e506ac9587168296ccd8d9d57a7c01d62d6a96&v=4
+avatar: https://raw.githubusercontent.com/scoutquinn/scouts/master/30714448.jpeg
 
 #
 # Flags below are optional
