--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: scout codes
+name: scout quinn
 
 # Short bio or description (displayed in the header)
 description: software developer and new media artist
