--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/scoutquinn/scouts/master/picture.jpeg
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: scout@dfdt.me
+  email: scout.quinn@icloud.com
   facebook:
   flickr:
   github: scoutquinn
   instagram:
-  linkedin: scoutquinn
+  linkedin:
   pinterest:
   rss: anything
   twitter: calculush
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://scout.codes
+url: https://scoutquinn.net
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
